# LiveFlow-Balancer-VST

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE.txt  README.md  README_zh.md
.github/workflows/: build-vst.yml
.wrangler/cache/: pages.json  wrangler-account.json
docs/: BUILD.md  Design.md
scripts/: redeploy_fender_studio_pro.cmd  redeploy_fender_studio_pro.ps1
src/core/: BalancerEngine.h  BalancerMath.h  LookAheadDelay.h  LoudnessEstimator.h  PluginParameters.cpp  PluginParameters.h  SpectralAnalyzer.h  SpectralDuckEQ.h  TrackProfile.h  TrackProfiler.h  VisualizationState.cpp  VisualizationState.h
src/licensing/: LicenseEncryption.h  LicenseManager.h  MachineFingerprint.h
src/plugin/: LiveFlowAudioProcessor.cpp  LiveFlowAudioProcessor.h  LiveFlowAudioProcessorEditor.cpp  LiveFlowAudioProcessorEditor.h  VST3HostDiagnostics.h
src/ui/: AboutOverlay.cpp  AboutOverlay.h  ActivationOverlay.h  CompactKnob.h  GainTimelineComponent.h  HelpOverlay.cpp  HelpOverlay.h  LiveFlowLookAndFeel.cpp  LiveFlowLookAndFeel.h  PresenceIndicator.h  Translations.h  VisualizerComponent.cpp  VisualizerComponent.h
tests/: LiveFlowTests.cpp
ui/: package-lock.json  package.json
ui/src/: App.tsx  i18n.ts  index.css
website/: .gitignore  index.html  package-lock.json  package.json  projects.txt  wrangler.jsonc  wrangler.toml
website/functions/api/: _utils.ts
website/functions/api/auth/: delete-account.ts  login.ts  logout.ts  me.ts  register.ts  send-code.ts  update-password.ts  update-profile.ts
website/functions/api/licenses/: claim.ts  list.ts  redeem.ts  unbind.ts
website/functions/api/plugin/: activate.ts  validate.ts
website/migrations/: 0001_init.sql  0002_verification.sql  0003_machine_info.sql  0004_validation_tracking.sql
website/src/: App.tsx  index.css
website/src/components/: Footer.tsx  Navbar.tsx
website/src/contexts/: AuthContext.tsx  LangContext.tsx
website/src/pages/: Dashboard.tsx  Home.tsx  Login.tsx  Register.tsx
